fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,6 +309,7 @@ input[type=submit] {
   }
   .auth-image {
     width: 100%;
+    margin-bottom: 20px;
   }
   footer {
     height: 15%;
